test/pass/program_var.min
program
    number program
start
    program := 1;
end
