test/fail/bignumber.min
program
start
    2147483648
end
